--- a/comment-store/src/main/resources/application.properties
+++ b/comment-store/src/main/resources/application.properties
@@ -7,7 +7,5 @@ spring.datasource.validation-query=SELECT 1
 spring.jpa.hibernate.dll-auto=update
 spring.jpa.hibernate.show-sql=true
     
-    
-   
-    
-    
+security.user.name=admin
+security.user.password=password
